# ECS-Engine-fork

./: CMakeLists.txt  LICENSE  README.md  build-SFML.cmake
include/: ecs.hpp
include/components/: playerController.hpp
include/core/: componentManager.hpp  coordinator.hpp  ecs.hpp  entity.hpp  entityManager.hpp  mouse.hpp  myComponents.hpp  myMath.hpp  mySystems.hpp  networkManager.hpp  system.hpp  systemManager.hpp  texture.hpp
include/core/components/: animator.hpp  boxCollider.hpp  camera.hpp  child.hpp  interactionBoxCollider.hpp  lifeTimer.hpp  rigidBody.hpp  spriteRenderer.hpp  tag.hpp  text.hpp  trail.hpp  transform.hpp  ui.hpp  uiButton.hpp
include/core/systems/: animationSystem.hpp  cameraSystem.hpp  childSystem.hpp  collisionSystem.hpp  drawSystem.hpp  interactionCollisionSystem.hpp  lifeTimerSystem.hpp  physicsSystem.hpp  textRenderingSystem.hpp  trailSystem.hpp  uiButtonSystem.hpp
include/systems/: playerMovementSystem.hpp
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  client.cpp  networkManager-client.cpp
src/content/: CMakeLists.txt
src/content/components/: CMakeLists.txt  playerController.cpp
src/content/systems/: CMakeLists.txt  playerMovementSystem.cpp
src/core/: CMakeLists.txt  componentArray.tpp  componentManager.cpp  componentManager.tpp  coordinator.cpp  coordinator.tpp  entityManager.cpp  getCoordinator.cpp  loadTextures.cpp  mouse.cpp  myMath.cpp  networkManager.cpp  systemManager.cpp  systemManager.tpp
src/core/components/: CMakeLists.txt  animator.cpp  boxCollider.cpp  camera.cpp  child.cpp  interactionBoxCollider.cpp  lifeTimer.cpp  rigidBody.cpp  spriteRenderer.cpp  tag.cpp  text.cpp  trail.cpp  transform.cpp  ui.cpp  uiButton.cpp
src/core/systems/: CMakeLists.txt  animationSystem.cpp  cameraSystem.cpp  childSystem.cpp  collisionSystem.cpp  drawSystem.cpp  interactionCollisionSystem.cpp  lifeTimerSystem.cpp  physicsSystem.cpp  textRenderingSystem.cpp  trailSystem.cpp  uiButtonSystem.cpp
src/server/: CMakeLists.txt  networkManager-server.cpp  server.cpp
