cmake_minimum_required(VERSION 3.23)

set(PROJECT_NAME ecs)
set(CMAKE_CXX_STANDARD 17)

project(
    ${PROJECT_NAME}
    VERSION 0.0.1
    DESCRIPTION "ECS lib"
    HOMEPAGE_URL "https://github.com/BenjosBourge/ECS-Engine"
    LANGUAGES CXX
)

add_library(${PROJECT_NAME} STATIC)
add_library(${PROJECT_NAME}:${PROJECT_NAME} ALIAS ${PROJECT_NAME})


include(GNUInstallDirs)

add_subdirectory(deps)

target_include_directories(
    ${PROJECT_NAME}
    INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

add_subdirectory(src)

target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)

include(CMakePackageConfigHelpers)

set(ECS_INCLUDE_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/")
set(ECS_INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}")

install(
    DIRECTORY ${ECS_INCLUDE_BUILD_DIR}
    DESTINATION ${ECS_INCLUDE_INSTALL_DIR}
)

export(
    TARGETS ${PROJECT_NAME}
    NAMESPACE ${PROJECT_NAME}::
    FILE ${PROJECT_NAME}Config.cmake
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    INCLUDES DESTINATION ${ECS_INCLUDE_INSTALL_DIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
install(
    EXPORT ${PROJECT_NAME}Targets
    NAMESPACE ${PROJECT_NAME}::
    DESTINATION ${ECS_INCLUDE_INSTALL_DIR}
)
